2008-Dec-08  yselkowitz

	* bin/cygport.in (__prepinstalldirs, __pkg_diff),
	lib/berkdb.cygclass (berkdb_autoreconf),
	lib/cross.cygclass (cross_config_sub),
	lib/gnome2.cygclass (gnome2_autoreconf),
	lib/kde3.cygclass (kde3_autoreconf):  Require stable libtool-2.2.

	* lib/gtkmm.cygclass: Improve ORIG_PN. Fix DIFF_EXCLUDES for 2.24.

	* bin/prep_fonts_dir.sh: Simplify .pcf compression code.

	* bin/prep_libtool_modules.sh: Speed up libtool version detection.

2008-Nov-26  yselkowitz

	* lib/gst-plugins0.10.cygclass: Enable experimental plugins.
	Override winsock2.h detection in favour of sys/socket.h.

2008-Nov-09  yselkowitz

	* lib/ruby-gnome2.cygclass (ruby_gnome2_compile): Build RI docs.
	(ruby_gnome2_install): Accept RDOC_MODULE.

	* lib/ruby.cygclass (ruby_install): Accept RDOC_MODULE.

	* bin/cygport.in (lndirs): lndir is now in the distro as part of
	modular X11, so we can require it unconditionally.

	* bin/cygport.in (pushd, popd): Override builtins with quiet versions.

2008-Nov-02  yselkowitz

	* bin/cygport.in (__pkg_dist): In the case of split binary packages,
	an empty binary package is not required to be aside the source package.

	* lib/xfce4.cygclass: Update for 4.6 betas.

	* Post-release version bump.

2008-Oct-28  yselkowitz

	* Tagged 0.4.2 release.

	* bin/cygport.in: Pack PVP into PV[1-*].
	(__pkg_binpkg): Accept foo_CONTENTS over PKG_CONTENTS[].

	* lib/gst-plugins0.10.cygclass: Add new plugins in -bad 0.10.9.

	* lib/xorg.cygclass: Add GIT_URI; rename font packages.

2008-Oct-13  yselkowitz

	* lib/gst-plugins0.10.cygclass: cdio moved to -ugly.

	* configure.ac: Post-release version bump.

2008-Oct-12  yselkowitz

	* Tagged 0.4.1 release.

	* lib/gst-plugins0.10.cygclass: Add ladspa to -bad.

2008-Sep-28  yselkowitz

	* bin/cygport.in (__src_fetch),
	lib/Makefile.am:
	lib/fossil.cygclass: NEW cygclass for Fossil checkouts.

	* lib/berkdb.cygclass (berkdb_compile) [tcl]: tclConfig.sh moved.

	* lib/ruby-gnome2.cygclass: Add ruby-goocanvas.